[project]
name = "causal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=2.18.2",
    "dash-bootstrap-components>=1.7.1",
    "dowhy==0.8",
    "graphviz>=0.20.3",
    "ipython>=8.32.0",
    "matplotlib>=3.10.0",
    "openai>=1.61.0",
]
